--- a/mantis-react/package.json
+++ b/mantis-react/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-date-pickers": "^7.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,9 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "highcharts": "^11.4.7",
+    "highcharts-react": "^0.0.3",
+    "highcharts-react-official": "^3.2.1",
+    "material-react-table": "^2.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
